tests/snapshots/ptx_golden_partition_snapshots__partition_reduce_minmax_float_max_f64.snap
---
source: tests/ptx_golden_partition_snapshots.rs
expression: normalize_ptx(&ptx)
---
.version 7.5
.target sm_70
.address_size 64

.shared .align 4 .b8 block_keys_buf[4096];
.shared .align 8 .b8 block_vals_buf[8192];
.shared .align 4 .b8 block_set_buf[4096];

.visible .entry bolt_partition_reduce_max_f64(
	.param .u64 bolt_partition_reduce_max_f64_param_0,
	.param .u64 bolt_partition_reduce_max_f64_param_1,
	.param .u64 bolt_partition_reduce_max_f64_param_2,
	.param .u64 bolt_partition_reduce_max_f64_param_3,
	.param .u64 bolt_partition_reduce_max_f64_param_4,
	.param .u64 bolt_partition_reduce_max_f64_param_5
)
{
	.reg .pred  %p<16>;
	.reg .b32   %r<64>;
	.reg .b64   %rd<64>;
	.reg .f32   %f<16>;
	.reg .f64   %fd<16>;
	.reg .u32   %nstime;

	mov.u32 %r{0}, %ctaid.x;
	mov.u32 %r{1}, %ntid.x;
	mov.u32 %r{2}, %tid.x;
	mov.u64 %rd{0}, block_keys_buf;
	mov.u64 %rd{1}, block_vals_buf;
	mov.u64 %rd{2}, block_set_buf;
	ld.param.u64 %rd{3}, [bolt_partition_reduce_max_f64_param_0];
	cvta.to.global.u64 %rd{3}, %rd{3};
	ld.param.u64 %rd{4}, [bolt_partition_reduce_max_f64_param_1];
	cvta.to.global.u64 %rd{4}, %rd{4};
	ld.param.u64 %rd{5}, [bolt_partition_reduce_max_f64_param_2];
	cvta.to.global.u64 %rd{5}, %rd{5};
	ld.param.u64 %rd{6}, [bolt_partition_reduce_max_f64_param_3];
	cvta.to.global.u64 %rd{6}, %rd{6};
	ld.param.u64 %rd{7}, [bolt_partition_reduce_max_f64_param_4];
	cvta.to.global.u64 %rd{7}, %rd{7};
	ld.param.u64 %rd{8}, [bolt_partition_reduce_max_f64_param_5];
	cvta.to.global.u64 %rd{8}, %rd{8};

	mul.wide.u32 %rd{9}, %r{0}, 4;
	add.s64 %rd{10}, %rd{5}, %rd{9};
	ld.global.u32 %r{3}, [%rd{10}];
	add.s64 %rd{11}, %rd{10}, 4;
	ld.global.u32 %r{4}, [%rd{11}];

	mov.u32 %r{5}, %r{2};
ZERO_TOP:
	setp.ge.u32 %p{0}, %r{5}, 1024;
	@%p{0} bra ZERO_DONE;
	mul.wide.u32 %rd{12}, %r{5}, 4;
	add.s64 %rd{13}, %rd{0}, %rd{12};
	st.shared.u32 [%rd{13}], 0;
	mul.wide.u32 %rd{14}, %r{5}, 8;
	add.s64 %rd{15}, %rd{1}, %rd{14};
	st.shared.u64 [%rd{15}], 0xFFF0000000000000;
	add.s64 %rd{16}, %rd{2}, %rd{12};
	st.shared.u32 [%rd{16}], 0;
	add.u32 %r{5}, %r{5}, 256;
	bra ZERO_TOP;
ZERO_DONE:
	bar.sync 0;

	add.u32 %r{6}, %r{3}, %r{2};
LOOP_TOP:
	setp.ge.u32 %p{1}, %r{6}, %r{4};
	@%p{1} bra LOOP_DONE;
	mul.wide.u32 %rd{17}, %r{6}, 4;
	add.s64 %rd{18}, %rd{3}, %rd{17};
	ld.global.s32 %r{7}, [%rd{18}];
	mul.wide.u32 %rd{19}, %r{6}, 8;
	add.s64 %rd{20}, %rd{4}, %rd{19};
	ld.global.f64 %fd{0}, [%rd{20}];
	and.b32 %r{8}, %r{7}, 0x3FF;
	mov.u32 %r{9}, 0;
PROBE_TOP:
	add.u32 %r{9}, %r{9}, 1;
	setp.gt.u32 %p{2}, %r{9}, 1024;
	@%p{2} bra LOOP_NEXT;
	mul.wide.u32 %rd{21}, %r{8}, 4;
	add.s64 %rd{22}, %rd{2}, %rd{21};
	add.s64 %rd{23}, %rd{0}, %rd{21};
	mul.wide.u32 %rd{24}, %r{8}, 8;
	add.s64 %rd{25}, %rd{1}, %rd{24};
	atom.shared.cas.b32 %r{10}, [%rd{22}], 0, 1;
	setp.eq.s32 %p{3}, %r{10}, 0;
	@%p{3} bra CLAIM;
PUBLISH_WAIT:
	ld.volatile.shared.u32 %r{11}, [%rd{22}];
	setp.eq.u32 %p{4}, %r{11}, 2;
	@%p{4} bra PUBLISH_DONE;
	mov.u32 %r{11}, 32;
	nanosleep.u32 %r{11};
	bra PUBLISH_WAIT;
PUBLISH_DONE:
	ld.shared.s32 %r{12}, [%rd{23}];
	setp.eq.s32 %p{5}, %r{12}, %r{7};
	@%p{5} bra MATCH;
	add.u32 %r{8}, %r{8}, 1;
	and.b32 %r{8}, %r{8}, 0x3FF;
	mov.u32 %nstime, 32;
	nanosleep.u32 %nstime;
	bra PROBE_TOP;
CLAIM:
	st.shared.u32 [%rd{23}], %r{7};
	membar.cta;
	st.shared.u32 [%rd{22}], 2;
CLAIM_CAS_LOAD:
	ld.shared.b64 %rd{26}, [%rd{25}];
	mov.b64 %fd{1}, %rd{26};
	mov.b64 %rd{27}, %fd{0};
	setp.gt.f64 %p{4}, %fd{0}, %fd{1};
	selp.b64 %rd{28}, %rd{27}, %rd{26}, %p{4};
	setp.eq.b64 %p{6}, %rd{28}, %rd{26};
	@%p{6} bra CLAIM_CAS_DONE;
	atom.shared.cas.b64 %rd{29}, [%rd{25}], %rd{26}, %rd{28};
	setp.eq.b64 %p{7}, %rd{29}, %rd{26};
	@!%p{7} mov.u32 %nstime, 32;
	@!%p{7} nanosleep.u32 %nstime;
	@!%p{7} bra CLAIM_CAS_LOAD;
CLAIM_CAS_DONE:
	bra LOOP_NEXT;
MATCH:
MATCH_CAS_LOAD:
	ld.shared.b64 %rd{26}, [%rd{25}];
	mov.b64 %fd{1}, %rd{26};
	mov.b64 %rd{27}, %fd{0};
	setp.gt.f64 %p{4}, %fd{0}, %fd{1};
	selp.b64 %rd{28}, %rd{27}, %rd{26}, %p{4};
	setp.eq.b64 %p{6}, %rd{28}, %rd{26};
	@%p{6} bra MATCH_CAS_DONE;
	atom.shared.cas.b64 %rd{29}, [%rd{25}], %rd{26}, %rd{28};
	setp.eq.b64 %p{7}, %rd{29}, %rd{26};
	@!%p{7} mov.u32 %nstime, 32;
	@!%p{7} nanosleep.u32 %nstime;
	@!%p{7} bra MATCH_CAS_LOAD;
MATCH_CAS_DONE:
LOOP_NEXT:
	add.u32 %r{6}, %r{6}, %r{1};
	bra LOOP_TOP;
LOOP_DONE:
	bar.sync 0;

	mul.lo.u32 %r{13}, %r{0}, 1024;
	mov.u32 %r{14}, %r{2};
EXPORT_TOP:
	setp.ge.u32 %p{8}, %r{14}, 1024;
	@%p{8} bra EXPORT_DONE;
	add.u32 %r{15}, %r{13}, %r{14};
	mul.wide.u32 %rd{30}, %r{14}, 4;
	add.s64 %rd{31}, %rd{0}, %rd{30};
	ld.shared.s32 %r{16}, [%rd{31}];
	mul.wide.u32 %rd{32}, %r{14}, 8;
	add.s64 %rd{33}, %rd{1}, %rd{32};
	ld.shared.f64 %fd{2}, [%rd{33}];
	add.s64 %rd{34}, %rd{2}, %rd{30};
	ld.shared.u32 %r{17}, [%rd{34}];
	setp.ne.s32 %p{9}, %r{17}, 0;
	selp.u32 %r{18}, 1, 0, %p{9};
	mul.wide.u32 %rd{35}, %r{15}, 4;
	add.s64 %rd{36}, %rd{6}, %rd{35};
	st.global.s32 [%rd{36}], %r{16};
	mul.wide.u32 %rd{37}, %r{15}, 8;
	add.s64 %rd{38}, %rd{7}, %rd{37};
	st.global.f64 [%rd{38}], %fd{2};
	cvt.u64.u32 %rd{39}, %r{15};
	add.s64 %rd{40}, %rd{8}, %rd{39};
	st.global.u8 [%rd{40}], %r{18};
	add.u32 %r{14}, %r{14}, 256;
	bra EXPORT_TOP;
EXPORT_DONE:
	ret;
}
